syntax = "proto3";

package helloworld;

service TransactionService {
    rpc MakeTransaction (TransactionRequest) returns (TransactionResponse);
}


message TransactionRequest {
    string PAN = 1;
    string destination = 2;
    int32 amount = 3;
}

message TransactionResponse {
    string transactionID = 1;
}
